--- a/biedn001_hw07/package.json
+++ b/biedn001_hw07/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mysql": "^2.18.1",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "xml2js": "^0.4.23"
   }
 }
